--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MS_TableConnectionString" connectionString="Data Source=jma-ludiverso.database.windows.net,1433;Initial Catalog=jma-ludiverso-xamagram;Persist Security Info=False;User ID=jma.ludiverso;Password=tuesdayp_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="MS_TableConnectionString" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="PreserveLoginUrl" value="true" />
